# python-pathspec

./: .README.rst.kate-swp  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.rst  CHANGES_0.in.rst  CHANGES_1.in.rst  DEV.md  LICENSE-MIT  LICENSING.md  MANIFEST  MANIFEST.in  Makefile  README-dist.rst  README.rst  SECURITY.md  UPGRADING.rst  benchmarks_backends.md  create_py26_env.sh  justfile  pathspec_meta.py  prebuild.py  pypi-upload.sh  pyproject.in.toml  pyproject.toml  setup.cfg  setup.py  test_py26.sh  testpypi_prepublish.py  tox-ci-py39.ini  tox.ini  tox.toml  tox_pip_install.py
.github/: egress-build-rules.yaml  egress-pypi-rules.yaml  egress-rules.yaml  egress-testpypi-rules.yaml
.github/workflows/: ci.yaml  publish-to-pypi.yml  publish-to-testpypi.yaml  publish-to-testpypi.yml  test-all.yaml  test-quick.yaml
benchmarks/: bench_fs.py  bench_gitignore.py  bench_gitignore_150p_to_1f_end.py  bench_gitignore_150p_to_1f_middle.py  bench_gitignore_150p_to_1f_none.py  bench_gitignore_150p_to_1f_start.py  bench_gitignore_150p_to_6500f.py  bench_gitignore_15p_to_1f_end.py  bench_gitignore_15p_to_1f_middle.py  bench_gitignore_15p_to_1f_none.py  bench_gitignore_15p_to_1f_start.py  bench_gitignore_15p_to_400f.py  bench_gitignore_many_to_many.py  bench_gitignore_many_to_one_end.py  bench_gitignore_many_to_one_middle.py  bench_gitignore_many_to_one_none.py  bench_gitignore_many_to_one_start.py  bench_gitignore_match_file_p1.py  bench_gitignore_match_file_p100.py  bench_gitignore_match_file_p15.py  bench_gitignore_match_file_p150.py  bench_gitignore_match_file_p2.py  bench_gitignore_match_file_p25.py  bench_gitignore_match_file_p5.py  bench_gitignore_match_file_p50.py  bench_gitignore_match_files_p1.py  bench_gitignore_match_files_p100.py  bench_gitignore_match_files_p15.py  bench_gitignore_match_files_p150.py  bench_gitignore_match_files_p25.py  bench_gitignore_match_files_p5.py  bench_gitignore_match_files_p50.py  bench_gitwildmatch_150p_to_6500f.py  bench_gitwildmatch_15p_to_400f.py  bench_match_files_cpython313_i7-165G7.json  bench_match_files_cpython313_ryzen_ai_max_395.json  bench_match_files_cpython313_xeon_e5-2690.json  bench_match_files_pypy310_i7-165G7.json  bench_match_files_pypy311_i7-165G7.json  bench_match_files_pypy311_ryzen_ai_max_395.json  (+44 more)
dev/: .gitignore  venv.sh
doc/: requirements.txt
doc/source/: api.rst  conf.py  index.rst  upgrading.rst
pathspec/: __init__.py  _meta.py  _typing.py  _version.py  compat.py  gitignore.py  match.py  pathspec.py  pattern.py  util.py
pathspec/_backends/: _utils.py  agg.py  base.py  gitignore.py  pathspec.py
pathspec/_backends/hyperscan/: _base.py  base.py  gitignore.py  pathspec.py
pathspec/_backends/re2/: _base.py  base.py  gitignore.py  pathspec.py
pathspec/_backends/simple/: gitignore.py  pathspec.py
pathspec/patterns/: __init__.py  gitwildmatch.py
pathspec/patterns/gitignore/: __init__.py  base.py  basic.py  doc.py  spec.py
pathspec/tests/: __init__.py  test_gitignore.py  test_gitwildmatch.py  test_pathspec.py  test_util.py
tests/: test_01_util.py  test_02_gitignore_base.py  test_02_gitignore_basic.py  test_02_gitwildmatch.py  test_03_gitignore_basic.py  test_03_gitignore_spec.py  test_03_pathspec.py  test_04_gitignore.py  test_04_gitignore_spec.py  test_04_pathspec.py  test_05_gitignore.py  test_06_gitignore.py  test_gitignore.py  test_gitwildmatch.py  test_pathspec.py  test_util.py  util.py
