[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=40.8.0", "wheel"]

[project]
authors = [
	{name = "Caleb P. Burns", email = "cpburnz@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
description = "Utility library for gitignore style pattern matching of file paths."
dynamic = ["version"]
license = {text = "MPL 2.0"}
name = "pathspec"
readme = "README-dist.rst"
requires-python = ">=3.7"

[project.urls]
"Source Code" = "https://github.com/cpburnz/python-pathspec"
"Documentation" = "https://python-path-specification.readthedocs.io/en/latest/index.html"
"Issue Tracker" = "https://github.com/cpburnz/python-pathspec/issues"

[tool.setuptools.dynamic]
version = {attr = "pathspec._meta.__version__"}

[tool.setuptools.packages.find]
include = ["pathspec", "pathspec.*"]
