[metadata]
author = Caleb P. Burns
author_email = cpburnz@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
description = Utility library for gitignore style pattern matching of file paths.
license = MPL 2.0
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
name = pathspec
version: attr: pathspec_meta.__version__
url = https://github.com/cpburnz/python-path-specification

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
setup_requires = setuptools >=39.2.0
test_suite = pathspec.tests

[bdist_wheel]
universal = 1
